# HexRaysCodeXplorer

./: .gitignore  ARCHITECTURE.md  CNAME  README.html  README.md  build.py  index.html  params.json
.cache/clangd/index/: ApiCompat.h.A649D50B454CC296.idx  ClangObjectFormatParser92.cpp.E8961C600DBC378A.idx  ClassHierarchyGraph.cpp.7A146C00E2C531BC.idx  (+77 more)
Hex-Rays Plugin contest release/: HexRaysCodeXplorer.plw
beta-test/Beta1_21-07-2013/: HexRaysCodeXplorer.plw
beta-test/Beta2_02-09-2013/: HexRaysCodeXplorer.plw
examples/: animal.py
sources/: HexRaysCodeXplorer.sln
sources/HexRaysCodeXplorer/: CodeXplorer.cpp  Common.h  GraphBuilder.cpp  GraphBuilder.h  HexRaysCodeXplorer.vcxproj  HexRaysCodeXplorer.vcxproj.filters  IdaGraphBuilder.h  ObjectExplorer.cpp  ObjectExplorer.h  ObjectType.cpp  ObjectType.h
src/: HexRaysCodeXplorer.sln  Makefile
src/HexRaysCodeXplorer/: CFIAnalyzer.h  CMakeLists.txt  ClangVTableParser.cpp  ClangVTableParser.h  ClassHierarchyGraph.cpp  ClassHierarchyGraph.h  CodeXplorer.cpp  Common.h  Compat.cpp  Compat.h  CompilerRTTIParser.cpp  CompilerRTTIParser.h  CtreeExtractor.cpp  CtreeExtractor.h  CtreeGraphBuilder.cpp  CtreeGraphBuilder.h  CtreeGraphBuilder_improved.cpp  Debug.cpp  Debug.h  GCCObjectFormatParser.cpp  GCCObjectFormatParser.h  GCCTypeInfo.cpp  GCCTypeInfo.h  GCCVtableInfo.cpp  GCCVtableInfo.h  GraphBuilder..cpp  GraphBuilder.cpp  GraphBuilder.h  HexRaysCodeXplorer.cpp  HexRaysCodeXplorer.h  HexRaysCodeXplorer.vcxproj  IObjectFormatParser.cpp  IObjectFormatParser.h  IdaGraphBuilder.cpp  ImprovedObjectExplorer.cpp  ImprovedObjectExplorer.h  IntegratedTreeExplorer.cpp  IntegratedTreeExplorer.h  IntegratedTreeExplorer_improved.cpp  IntegratedTreeExplorer_improved.h  (+43 more)
src/HexRaysCodeXplorer.xcodeproj/: project.pbxproj
src/cmake/: FindIdaSdk.cmake
src/codeexplorer/: codeexplorer.cpp  codeexplorer.py  codeexplorer.vcxproj  dllmain.cpp  stdafx.h
(+7 files in other folders)
